# QuickGrade

./: .env.example  .gitignore  REQUIREMENTS.md  SCRUM.md  docker-compose.yml  main.py  manage.py  package.json  pyproject.toml
core/: models.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py
github_app/: admin.py  api.py  models.py  tasks.py  urls.py  views.py
github_app/migrations/: 0001_initial.py
github_app/services/: __init__.py  analysis_service.py  api_client.py  cleanup_service.py  clone_service.py  fetch_service.py
quickgrade/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/css/: nucleo.css
taiga_app/: apps.py  urls.py  views.py
templates/: base.html  base_auth.html  dashboard.html  preferences.html  profile.html  upload.html
templates/account/: login.html  logout.html
templates/github/: analytics.html  dashboard.html  fetch.html  repository_detail.html
templates/taiga/: dashboard.html  fetch.html
